# jpellis.me

./: .clippy.toml  .editorconfig  .envrc  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .rumdl.toml  .rustfmt.toml  .typos.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  astro.config.mjs  aube-lock.yaml  biome.jsonc  build.rs  eslint.config.js  mdsvex.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  prek.toml  rumdl.toml  rust-toolchain.toml  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: renovate.json  renovate.json5
.github/workflows/: checks.yml  deploy.yml  labels.yml  renovate.json  test.yml
app/: content.config.ts  env.d.ts
app/components/: analytics.astro  band.astro  footer.astro  live-stats.svelte  masthead.astro  socials.astro  year-in-code.astro
app/content/: resume.toml
app/content/blog/: a-sneak-peek-into-the-pact-python-future.md  astro-rewrite.md  asynchronous-message-support.md  functional-arguments.md  integrating-rust-ffi-with-pact-python.md  pact-python-v3-release.md
app/content/projects/: pact-python.md  rust-skiplist.md  simpler-wick.md  tikz-feynman.md
app/data/: github-projects-fallback.json  github-stats-fallback.json  oss-contribs.ts  projects-data.test.ts  projects.ts
app/layouts/: base.astro
app/lib/: blog-helpers.test.ts  blog.ts  fixture-check.test.ts  github-projects.test.ts  github-projects.ts  github-stats.test.ts  github-stats.ts  markdown-pymdownx.test.ts  projects-helpers.test.ts  projects.ts  rehype-pymdownx.ts  resume-data.test.ts  resume.ts  roman.test.ts  roman.ts  stats-cache.test.ts  stats-cache.ts  year-in-code.test.ts  year-in-code.ts
app/pages/: 404.astro  contact.astro  index.astro  projects.astro  resume.astro  rss.xml.ts
app/pages/api/: github-stats.ts
app/pages/blog/: [...slug].astro  index.astro
app/pages/projects/: [slug].astro
app/styles/: _layer-order.scss  main.scss
app/styles/base/: _reset.scss  _root.scss  _typography.scss
app/styles/components/: _buttons.scss  _container.scss  _eyebrow-grid.scss  _eyebrow.scss  _hairlines.scss  _prism.scss  _prose.scss  _tags.scss
app/styles/mixins/: _focus.scss
app/styles/tokens/: _borders.scss  _breakpoints.scss  _colors.scss  _layout.scss  _motion.scss  _spacing.scss  _typography.scss
app/styles/utilities/: _sr-only.scss
content/blog/: leptos-rewrite.md
content/blog/2024/: 04-11 a sneak peek into the pact python future.md  05-02 integrating rust ffi with pact python.md  07-26 asynchronous message support.md  12-30 functional arguments.md
content/blog/2025/: 12-04 pact-python-v3-release.md
content/projects/: pact-python.md  rust-skiplist.md  simpler-wick.md  tikz-feynman.md
docs/: DESIGN_GUIDELINE.md
e2e/: aube-lock.yaml  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: band.spec.ts  css-foundation-2.spec.ts  css-foundation.spec.ts  footer.spec.ts  home.spec.ts  masthead.spec.ts  no-js.spec.ts
public/: _redirects  browserconfig.xml  site.webmanifest
scripts/: generate-favicons.rs  update-fallback-data.rs  update-fallback-data.ts  update-oss-contribs.rs  update-oss-contribs.ts
src/: ambient.d.ts  app.html  app.postcss  index.test.ts  lib.rs  main.rs  workers.rs
src/blog/: mod.rs
src/components/: mod.rs
src/components/band/: band.module.scss  mod.rs
src/components/footer/: footer.module.scss  mod.rs  style.module.scss
src/components/masthead/: clock.rs  masthead.module.scss  mod.rs  style.module.scss
src/components/year_in_code/: mod.rs  year_in_code.module.scss
src/config/: mod.rs  projects.rs  projects.toml  work.rs  work.toml
src/github/: defaults.rs  fetch.rs  mod.rs  model.rs  provider.rs  server_fn.rs
src/integration/: mod.rs
src/integration/github/: mod.rs
src/integration/github/projects/: defaults.rs  fallback.json  fetch.rs  mod.rs  model.rs  provider.rs  server_fn.rs
src/integration/github/stats/: defaults.rs  fallback.json  fetch.rs  mod.rs  model.rs  provider.rs  server_fn.rs
src/integration/github/work/: defaults.rs  fetch.rs  mod.rs  model.rs  provider.rs  server_fn.rs
src/lib/components/AppBar/: AppBar.svelte
src/lib/components/Footer/: Footer.svelte
src/lib/components/Hero/: Hero.svelte
src/lib/components/MyAppBar/: MyAppBar.svelte
src/lib/components/MyLinks/: MyLinks.svelte
src/lib/components/Navbar/: Navbar.svelte
src/lib/components/Resume/: Organization.svelte  Position.svelte  Resume.svelte
src/lib/components/Sidebar/: Sidebar.svelte
src/lib/components/SocialLinks/: SocialLinks.svelte
src/lib/styles/: global.postcss  theme.postcss  theme.ts
src/pages/: contact.module.scss  contact.rs  home.module.scss  home.rs  mod.rs
src/pages/blog/: blog.module.scss  mod.rs  post.rs
src/pages/contact/: contact.module.scss  contact_email.module.scss  email.rs  mod.rs  pgp.rs
src/pages/home/: home.module.scss  mod.rs
src/pages/not_found/: mod.rs  not_found.module.scss
src/pages/projects/: detail.module.scss  detail.rs  mod.rs  projects.module.scss
src/pages/resume/: honour.module.scss  honour.rs  mod.rs  publication.module.scss  publication.rs  resume.module.scss  role.module.scss  role.rs
src/pages/work/: mod.rs  work.module.scss
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.server.ts
src/routes/blog/: +page.svelte
src/routes/projects/: +layout.svelte  +page.server.ts  +page.svelte
src/test_pages/: band.rs  css_foundation.rs  footer.rs  masthead.rs  mod.rs
static/: robots.txt  site.webmanifest
style/: main.scss
style/base/: _reset.scss  _root.scss  _typography.scss
style/components/: _band.scss  _buttons.scss  _container.scss  _eyebrow-grid.scss  _eyebrow.scss  _footer.scss  _hairlines.scss  _masthead.scss  _prism.scss  _prose.scss  _tags.scss
style/mixins/: _focus.scss
style/tokens/: _borders.scss  _breakpoints.scss  _colors.scss  _layout.scss  _motion.scss  _spacing.scss  _typography.scss
style/utilities/: _sr-only.scss
(+8 files in other folders)
