[package]
name = "jpellis-me"
version = "0.1.0"
edition = "2024"
publish = false

  [package.metadata]
    [package.metadata.leptos]
    output-name = "jpellis-me"
    bin-features = ["ssr"]
    lib-features = ["hydrate"]
    lib-profile-release = "wasm-release"
    assets-dir = "public"
    style-file = "style/main.scss"
    end2end-cmd = "cd e2e && aube exec playwright test"
    end2end-dir = "e2e"

    [package.metadata.stylance]
    output_dir = "./style/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stylance = "0.8"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[target]
  [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
  axum = { version = "0.8" }
  chrono = { version = "0.4", features = ["serde"] }
  leptos_axum = { version = "0.8" }
  leptos_config = { version = "0.8" }
  reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls"
  ] }
  tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

  [target.'cfg(target_arch = "wasm32")'.dependencies]
  chrono = { version = "0.4", features = ["serde", "wasmbind"] }
  getrandom = { version = "0.4", features = ["wasm_js"] }
  getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
  leptos_axum = { version = "0.8", default-features = false, features = ["wasm"] }
  reqwest = { version = "0.12", default-features = false, features = ["json"] }
  worker = { version = "0.5", features = ["axum"] }

[features]
hydrate = ["dep:console_error_panic_hook", "leptos/hydrate"]
ssr = ["leptos_meta/ssr", "leptos_router/ssr", "leptos/ssr"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
