#:tombi toml-version = "v1.0.0"

[package]
name = "jpellis-me"
version = "0.1.0"
edition = "2024"
publish = false

  [package.metadata]
    [package.metadata.leptos]
    output-name = "jpellis-me"
    bin-features = ["ssr"]
    lib-features = ["hydrate"]
    lib-profile-release = "wasm-release"
    assets-dir = "public"
    style-file = "style/main.scss"
    end2end-cmd = "cd e2e && aube exec playwright test"
    end2end-dir = "e2e"

    [package.metadata.stylance]
    output_dir = "./style/"

[workspace]
resolver = "2"
members = ["."]

  [workspace.lints]
  # Opt-out approach: all groups are enabled at warn, then individual lints that
  # don't fit the project are explicitly allowed.

    [workspace.lints.clippy]
    # Enable all groups at lower priority so individual lints can override
    cargo = { level = "warn", priority = -1 }
    complexity = { level = "warn", priority = -1 }
    correctness = { level = "warn", priority = -1 }
    pedantic = { level = "warn", priority = -1 }
    perf = { level = "warn", priority = -1 }
    restriction = { level = "warn", priority = -1 }
    style = { level = "warn", priority = -1 }
    suspicious = { level = "warn", priority = -1 }

    # Restriction lints: opt-in group; silence the meta-lint since we're using it
    blanket-clippy-restriction-lints = "allow"

    alloc_instead_of_core = "allow"  # prefer std::collections over core; alloc crate not used directly
    arbitrary_source_item_ordering = "allow"  # item order is left to author discretion
    cognitive_complexity = "allow"  # complexity is managed via code review, not a numeric threshold
    else_if_without_else = "allow"  # final else branches are often unnecessary noise
    impl_trait_in_params = "allow"  # `impl Trait` in fn params is idiomatic for simple bounds
    implicit_return = "allow"  # Rust's implicit return is idiomatic; explicit `return` is reserved for early exits
    min_ident_chars = "allow"  # single-letter names (e.g. `i`, `n`) are fine in tight scopes
    missing_trait_methods = "allow"  # partial trait implementations with provided defaults are intentional
    mod_module_files = "allow"  # prefer mod.rs to organise modules by directory
    module_name_repetitions = "allow"  # allow 'foo.rs' to contain `struct FooBar`, or `fn foo_bar`
    multiple_crate_versions = "allow"  # duplicate transitive deps are unavoidable in a large workspace
    non_ascii_literal = "allow"  # Unicode string literals are used for currency symbols and display text
    pattern_type_mismatch = "allow"  # match ergonomics (auto-ref in patterns) is standard Rust style
    pub_with_shorthand = "allow"  # `pub(crate)` shorthand is preferred over `pub(in crate)`
    question_mark_used = "allow"  # `?` for error propagation is idiomatic Rust
    ref_patterns = "allow"  # `ref` in patterns is occasionally needed for complex destructuring
    separated_literal_suffix = "allow"  # `1_u32` style is preferred over `1u32` for readability
    single_call_fn = "allow"  # helper functions aid readability even when called once
    single_char_lifetime_names = "allow"  # `'a`, `'b` lifetime names are standard for short-lived generics
    std_instead_of_alloc = "allow"  # `std::` is used throughout; alloc-only builds are not a goal
    std_instead_of_core = "allow"
    unreachable = "allow"  # `unreachable!()` is used to mark logically impossible branches

    # Known upstream issues; revisit when fixed
    # https://github.com/rust-lang/rust-clippy/issues/14056
    panic_in_result_fn = "allow"

    [workspace.lints.rust]
    # See https://doc.rust-lang.org/rustc/lints/groups.html
    # and `rustc -W help` for the full list of built-in lints

    deprecated-safe = "warn"
    future-incompatible = "warn"
    keyword-idents = "warn"
    let-underscore = "warn"
    missing_docs = "warn"
    nonstandard-style = "warn"
    refining-impl-trait = "warn"
    unknown-or-malformed-diagnostic-attributes = "warn"
    unused = "warn"
    warnings = "warn"

    [workspace.lints.rustdoc]
    # See: https://doc.rust-lang.org/rustdoc/lints.html
    missing-crate-level-docs = "warn"
    private-doc-tests = "warn"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"] }
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stylance = "0.8"
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[build-dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = [
  "html"
] }
serde = { version = "1", features = ["derive"] }
toml = { version = "1.0", default-features = false, features = [
  "parse",
  "serde"
] }

[target]
  [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
  axum = { version = "0.8" }
  chrono = { version = "0.4", features = ["serde"] }
  leptos_axum = { version = "0.8" }
  leptos_config = { version = "0.8" }
  reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls"
  ] }
  tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

  [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
  wasm-bindgen-test = "=0.3.73"

  [target.'cfg(target_arch = "wasm32")'.dependencies]
  axum = { version = "0.8", default-features = false, optional = true }
  chrono = { version = "0.4", features = ["serde", "wasmbind"] }
  getrandom = { version = "0.4", features = ["wasm_js"] }
  getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
  leptos_axum = { version = "0.8", default-features = false, features = ["wasm"], optional = true }
  reqwest = { version = "0.13", default-features = false, features = ["json"], optional = true }
  send_wrapper = { version = "0.6", optional = true }
  tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
  # SSR-only: not needed for hydrate/browser builds (prevents wasm-streams duplicate
  # symbol errors — reqwest and worker each bring a different version).
  web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }
  worker = { version = "0.8", features = ["axum", "http"], optional = true }

[features]
hydrate = ["dep:console_error_panic_hook", "leptos/hydrate"]
ssr = [
  # wasm32-only SSR deps (no-op on native; activates the optional wasm32 deps above)
  "dep:axum",
  "dep:leptos_axum",
  "dep:reqwest",
  "dep:send_wrapper",
  "dep:tower",
  "dep:worker",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
]

[lints]
workspace = true

# [patch]
#   [patch.crates-io]
#   leptos = { path = "../../leptos-rs/leptos/leptos" }
#   leptos_axum = { path = "../../leptos-rs/leptos/integrations/axum" }
#   leptos_config = { path = "../../leptos-rs/leptos/leptos_config" }
#   leptos_integration_utils = { path = "../../leptos-rs/leptos/integrations/utils" }
#   leptos_macro = { path = "../../leptos-rs/leptos/leptos_macro" }
#   leptos_router = { path = "../../leptos-rs/leptos/router" }
#   leptos_router_macro = { path = "../../leptos-rs/leptos/router_macro" }
#   tachys = { path = "../../leptos-rs/leptos/tachys" }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
